test/integration/bad/reserved/row_stochastic_matrix.stan
generated quantities {
  int row_stochastic_matrix;
}
